libraries/notification/src/main/java/com/example/mirai/libraries/notification/error/NotificationErrorRepository.java
package com.example.mirai.libraries.notification.error;

import org.springframework.data.repository.CrudRepository;

public interface NotificationErrorRepository extends CrudRepository<NotificationError, Long> {
}
